tests/valid/lifetime/read_through_ref.facet
// Local borrow: create a reference, dereference it, return the value (not the ref).
// fn_lifetimes = 0 — no exportable lifetime, but the ref is consumed locally.
fn f(x: unrestricted isize) -> unrestricted isize {
    (*(&x))
}
